--- a/style.css
+++ b/style.css
@@ -14,8 +14,7 @@ body {
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 ul, ol {
@@ -66,6 +65,26 @@ a {
   width: 100px;
 }
 
+.border-box, .section03-inner .bot-right .border-box, .section03-inner .top-left .border-box {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border: 50px solid #000;
+  border-right: 0;
+}
+
+.semicircle, .section03-inner .bot-right .semicircle, .section03-inner .top-left .semicircle {
+  width: 50%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-top-left-radius: 1000px;
+  border-bottom-left-radius: 1000px;
+  mix-blend-mode: difference;
+  background: #eee;
+}
+
 /*** 헤더 시작 ***/
 .at-header {
   width: 100%;
@@ -73,31 +92,20 @@ a {
   top: -100%;
   left: 0;
   z-index: 99;
-  -webkit-transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
   transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
 }
 .at-header .header-inner {
   height: 100px;
   line-height: 100px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
   position: relative;
   padding: 0 21px;
 }
 .at-header .header-inner .logo a {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 .at-header .header-inner .logo a img {
   width: auto;
@@ -105,17 +113,12 @@ a {
 }
 .at-header .header-inner .menu_ul {
   line-height: 1;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   gap: 53px;
   position: absolute;
   left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
 }
 .at-header .header-inner .menu_ul li a {
   font-size: 20px;
@@ -123,12 +126,8 @@ a {
   color: #000;
 }
 .at-header .header-inner .right_lnb {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   gap: 30px;
 }
 .at-header .header-inner .right_lnb .search_btn {
@@ -151,20 +150,14 @@ a {
   height: 3px;
   right: -2px;
   bottom: 3px;
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
+  transform: rotate(45deg);
   background: #000;
 }
 .at-header .header-inner .right_lnb .allMenu_btn {
   width: 30px;
   height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
+  flex-flow: column;
   gap: 7px;
   cursor: pointer;
 }
@@ -187,20 +180,12 @@ a {
 .section01-inner .top .line_bx {
   height: 78px;
   line-height: 78px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
   border-bottom: 1px solid #000;
 }
 .section01-inner .top .line_bx > div {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 .section01-inner .top .line_bx > div span {
@@ -208,26 +193,16 @@ a {
   background: #000;
 }
 .section01-inner .top .line_bx > div:first-child, .section01-inner .top .line_bx > div:last-child {
-  -webkit-column-gap: 236px;
-     -moz-column-gap: 236px;
-          column-gap: 236px;
+  column-gap: 236px;
 }
 .section01-inner .top .b_tit {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
   padding: 10px 15px 10px 0;
   border-bottom: 1px solid #000;
 }
 .section01-inner .top .b_tit .txt h1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   letter-spacing: -2px;
 }
@@ -244,20 +219,12 @@ a {
   border-radius: 140px;
 }
 .section01-inner .bot {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding: 20px;
-  -webkit-column-gap: 20px;
-     -moz-column-gap: 20px;
-          column-gap: 20px;
+  column-gap: 20px;
 }
 .section01-inner .bot-left {
-  -webkit-box-flex: 0.6;
-      -ms-flex: 0.6;
-          flex: 0.6;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex: 0.6;
   display: flex;
 }
 .section01-inner .bot-left .s_txt {
@@ -266,9 +233,7 @@ a {
   font-weight: 400;
   font-family: "Noto Sans KR", sans-serif;
   color: #000;
-  -webkit-writing-mode: vertical-lr;
-      -ms-writing-mode: tb-lr;
-          writing-mode: vertical-lr;
+  writing-mode: vertical-lr;
   text-orientation: sideways-right;
 }
 .section01-inner .bot-left .s_txt p:first-child {
@@ -282,8 +247,7 @@ a {
 }
 .section01-inner .bot-left .r_txt .img-box img {
   width: 100%;
-  -webkit-filter: grayscale(1);
-          filter: grayscale(1);
+  filter: grayscale(1);
 }
 .section01-inner .bot-left .r_txt .img-box .deco {
   width: 100%;
@@ -302,25 +266,14 @@ a {
   color: #000;
 }
 .section01-inner .bot-right {
-  -webkit-box-flex: 0.4;
-      -ms-flex: 0.4;
-          flex: 0.4;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex: 0.4;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
+  flex-flow: column;
   gap: 25px;
 }
 .section01-inner .bot-right div {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   position: relative;
 }
 .section01-inner .bot-right div p {
@@ -343,12 +296,8 @@ a {
 /*** 섹션01 끝 ***/
 /*** 섹션02 시작 ***/
 .section02-inner .top {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   gap: 160px;
   padding: 40px 0 40px;
   background: url("./img/line_deco.png") right top no-repeat;
@@ -356,8 +305,6 @@ a {
 }
 .section02-inner .top-left {
   width: 65.705%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 80px;
 }
@@ -386,17 +333,12 @@ a {
 }
 .section02-inner .top-left .con-box .txt img {
   width: 100%;
-  -webkit-filter: grayscale(1);
-          filter: grayscale(1);
+  filter: grayscale(1);
 }
 .section02-inner .top-right {
   width: 34.295%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  align-items: flex-end;
 }
 .section02-inner .top-right .deco {
   width: 100%;
@@ -404,12 +346,8 @@ a {
   background: #000;
 }
 .section02-inner .bot {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   padding: 110px 0 80px;
   background: url("./img/line_deco2.png") right top no-repeat;
   background-size: 848px;
@@ -418,12 +356,8 @@ a {
   width: calc(100% - 145px);
 }
 .section02-inner .bot-left .con-box .txt {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
 .section02-inner .bot-left .con-box .txt .deco {
   width: 475px;
@@ -450,53 +384,26 @@ a {
 }
 .section02-inner .bot-left .con-box .img-box img {
   width: 100%;
-  -webkit-filter: grayscale(1);
-          filter: grayscale(1);
+  filter: grayscale(1);
 }
 .section02-inner .bot-right {
   width: 60px;
-  height: 935px;
+  height: 700px;
   background: #000;
 }
 
 /*** 섹션02 끝 ***/
 /*** 섹션03 시작 ***/
 .section03-inner .top {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   border-top: 1px solid #000;
   border-bottom: 1px solid #000;
 }
 .section03-inner .top-left {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex: 1;
   display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  align-items: flex-end;
   position: relative;
-}
-.section03-inner .top-left .border-box {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  border: 50px solid #000;
-  border-right: 0;
-}
-.section03-inner .top-left .semicircle {
-  width: 50%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  right: 0;
-  border-top-left-radius: 1000px;
-  border-bottom-left-radius: 1000px;
-  mix-blend-mode: difference;
-  background: #eee;
 }
 .section03-inner .top-left h1 {
   width: 100%;
@@ -508,43 +415,24 @@ a {
   mix-blend-mode: difference;
 }
 .section03-inner .top-left h1 p {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 .section03-inner .top-left h1 p:last-child {
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  justify-content: flex-end;
   margin-right: -18%;
 }
 .section03-inner .top-right {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
 }
 .section03-inner .top-right .con-box .con {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 .section03-inner .top-right .con-box .con .txt {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex: 1;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
+  align-items: center;
+  justify-content: space-between;
+  flex-flow: column;
 }
 .section03-inner .top-right .con-box .con .txt h1 {
   line-height: 1;
@@ -561,20 +449,75 @@ a {
   padding: 20px;
 }
 .section03-inner .top-right .con-box .con .img-box {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
 }
 .section03-inner .top-right .con-box .con .img-box img {
   width: 100%;
   height: 100%;
-  -webkit-filter: grayscale(1);
-          filter: grayscale(1);
+  filter: grayscale(1);
 }
 .section03-inner .top-right .con-box .con02 .txt {
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2;
+  order: 2;
+}
+.section03-inner .bot {
+  display: flex;
+}
+.section03-inner .bot-left {
+  flex: 1;
+}
+.section03-inner .bot-left .img-box img {
+  width: 100%;
+  filter: grayscale(1);
+}
+.section03-inner .bot-left .con-box .txt h1 {
+  width: 100%;
+  line-height: 1;
+  padding: 20px;
+  text-align: center;
+}
+.section03-inner .bot-left .con-box .txt .line {
+  width: 1px;
+  height: 120px;
+  margin: 0 auto;
+  background: #000;
+}
+.section03-inner .bot-left .con-box .txt p {
+  line-height: 1.66;
+  font-size: clamp(0.95rem, 1.01vw, 1.5vw);
+  font-weight: 400;
+  font-family: "Noto Sans KR", sans-serif;
+  color: #000;
+  padding: 20px;
+}
+.section03-inner .bot-right {
+  flex: 1;
+  position: relative;
+}
+.section03-inner .bot-right .border-box {
+  border-left: 0;
+  border-right: 50px solid #000;
+}
+.section03-inner .bot-right .semicircle {
+  right: auto;
+  left: 0;
+  border-top-right-radius: 1000px;
+  border-bottom-right-radius: 1000px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.section03-inner .bot-right ul {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column;
+}
+.section03-inner .bot-right ul li a {
+  line-height: 90px;
+  font-size: 60px;
+  font-weight: 600;
+  color: #fff;
+  mix-blend-mode: difference;
 }
 
 /*** 섹션03 끝 ***/
