--- a/style.css
+++ b/style.css
@@ -14,8 +14,7 @@ body {
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 ul, ol {
@@ -93,31 +92,20 @@ a {
   top: -100%;
   left: 0;
   z-index: 99;
-  -webkit-transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
   transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
 }
 .at-header .header-inner {
   height: 100px;
   line-height: 100px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
   position: relative;
   padding: 0 21px;
 }
 .at-header .header-inner .logo a {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 .at-header .header-inner .logo a img {
   width: auto;
@@ -125,17 +113,12 @@ a {
 }
 .at-header .header-inner .menu_ul {
   line-height: 1;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   gap: 53px;
   position: absolute;
   left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
 }
 .at-header .header-inner .menu_ul li a {
   font-size: 20px;
@@ -143,12 +126,8 @@ a {
   color: #000;
 }
 .at-header .header-inner .right_lnb {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   gap: 30px;
 }
 .at-header .header-inner .right_lnb .search_btn {
@@ -171,20 +150,14 @@ a {
   height: 3px;
   right: -2px;
   bottom: 3px;
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
+  transform: rotate(45deg);
   background: #000;
 }
 .at-header .header-inner .right_lnb .allMenu_btn {
   width: 30px;
   height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
+  flex-flow: column;
   gap: 7px;
   cursor: pointer;
 }
@@ -207,20 +180,12 @@ a {
 .section01-inner .top .line_bx {
   height: 78px;
   line-height: 78px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
   border-bottom: 1px solid #000;
 }
 .section01-inner .top .line_bx > div {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 .section01-inner .top .line_bx > div span {
@@ -228,26 +193,16 @@ a {
   background: #000;
 }
 .section01-inner .top .line_bx > div:first-child, .section01-inner .top .line_bx > div:last-child {
-  -webkit-column-gap: 236px;
-     -moz-column-gap: 236px;
-          column-gap: 236px;
+  column-gap: 236px;
 }
 .section01-inner .top .b_tit {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
   padding: 10px 15px 10px 0;
   border-bottom: 1px solid #000;
 }
 .section01-inner .top .b_tit .txt h1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   letter-spacing: -2px;
 }
@@ -264,20 +219,12 @@ a {
   border-radius: 140px;
 }
 .section01-inner .bot {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding: 20px;
-  -webkit-column-gap: 20px;
-     -moz-column-gap: 20px;
-          column-gap: 20px;
+  column-gap: 20px;
 }
 .section01-inner .bot-left {
-  -webkit-box-flex: 0.6;
-      -ms-flex: 0.6;
-          flex: 0.6;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex: 0.6;
   display: flex;
 }
 .section01-inner .bot-left .s_txt {
@@ -286,9 +233,7 @@ a {
   font-weight: 400;
   font-family: "Noto Sans KR", sans-serif;
   color: #000;
-  -webkit-writing-mode: vertical-lr;
-      -ms-writing-mode: tb-lr;
-          writing-mode: vertical-lr;
+  writing-mode: vertical-lr;
   text-orientation: sideways-right;
 }
 .section01-inner .bot-left .s_txt p:first-child {
@@ -302,8 +247,7 @@ a {
 }
 .section01-inner .bot-left .r_txt .img-box img {
   width: 100%;
-  -webkit-filter: grayscale(1);
-          filter: grayscale(1);
+  filter: grayscale(1);
 }
 .section01-inner .bot-left .r_txt .img-box .deco {
   width: 100%;
@@ -322,25 +266,14 @@ a {
   color: #000;
 }
 .section01-inner .bot-right {
-  -webkit-box-flex: 0.4;
-      -ms-flex: 0.4;
-          flex: 0.4;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex: 0.4;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
+  flex-flow: column;
   gap: 25px;
 }
 .section01-inner .bot-right div {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   position: relative;
 }
 .section01-inner .bot-right div p {
@@ -363,12 +296,8 @@ a {
 /*** 섹션01 끝 ***/
 /*** 섹션02 시작 ***/
 .section02-inner .top {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   gap: 160px;
   padding: 40px 0 40px;
   background: url("./img/line_deco.png") right top no-repeat;
@@ -376,8 +305,6 @@ a {
 }
 .section02-inner .top-left {
   width: 65.705%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 80px;
 }
@@ -406,17 +333,12 @@ a {
 }
 .section02-inner .top-left .con-box .txt img {
   width: 100%;
-  -webkit-filter: grayscale(1);
-          filter: grayscale(1);
+  filter: grayscale(1);
 }
 .section02-inner .top-right {
   width: 34.295%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  align-items: flex-end;
 }
 .section02-inner .top-right .deco {
   width: 100%;
@@ -424,12 +346,8 @@ a {
   background: #000;
 }
 .section02-inner .bot {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   padding: 110px 0 80px;
   background: url("./img/line_deco2.png") right top no-repeat;
   background-size: 848px;
@@ -438,12 +356,8 @@ a {
   width: calc(100% - 145px);
 }
 .section02-inner .bot-left .con-box .txt {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
 .section02-inner .bot-left .con-box .txt .deco {
   width: 475px;
@@ -470,8 +384,7 @@ a {
 }
 .section02-inner .bot-left .con-box .img-box img {
   width: 100%;
-  -webkit-filter: grayscale(1);
-          filter: grayscale(1);
+  filter: grayscale(1);
 }
 .section02-inner .bot-right {
   width: 60px;
@@ -485,22 +398,14 @@ a {
   border-bottom: 1px solid #000;
 }
 .section03-inner .top {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   border-top: 1px solid #000;
   border-bottom: 1px solid #000;
 }
 .section03-inner .top-left {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex: 1;
   display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  align-items: flex-end;
   position: relative;
 }
 .section03-inner .top-left h1 {
@@ -513,43 +418,24 @@ a {
   mix-blend-mode: difference;
 }
 .section03-inner .top-left h1 p {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 .section03-inner .top-left h1 p:last-child {
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  justify-content: flex-end;
   margin-right: -18%;
 }
 .section03-inner .top-right {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
 }
 .section03-inner .top-right .con-box .con {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 .section03-inner .top-right .con-box .con .txt {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex: 1;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
+  align-items: center;
+  justify-content: space-between;
+  flex-flow: column;
 }
 .section03-inner .top-right .con-box .con .txt h1 {
   line-height: 1;
@@ -566,35 +452,25 @@ a {
   padding: 20px;
 }
 .section03-inner .top-right .con-box .con .img-box {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
 }
 .section03-inner .top-right .con-box .con .img-box img {
   width: 100%;
   height: 100%;
-  -webkit-filter: grayscale(1);
-          filter: grayscale(1);
+  filter: grayscale(1);
 }
 .section03-inner .top-right .con-box .con02 .txt {
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2;
+  order: 2;
 }
 .section03-inner .bot {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 .section03-inner .bot-left {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
 }
 .section03-inner .bot-left .img-box img {
   width: 100%;
-  -webkit-filter: grayscale(1);
-          filter: grayscale(1);
+  filter: grayscale(1);
 }
 .section03-inner .bot-left .con-box .txt h1 {
   width: 100%;
@@ -617,9 +493,7 @@ a {
   padding: 20px;
 }
 .section03-inner .bot-right {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
   position: relative;
 }
 .section03-inner .bot-right .border-box {
@@ -636,19 +510,10 @@ a {
 }
 .section03-inner .bot-right ul {
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column;
 }
 .section03-inner .bot-right ul li a {
   line-height: 90px;
@@ -668,18 +533,10 @@ a {
   border-bottom: 1px solid #000;
 }
 .section04-inner .top-top {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex: 1;
   display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: flex-end;
+  justify-content: space-between;
   gap: 60px;
 }
 .section04-inner .top-top .deco {
@@ -695,21 +552,15 @@ a {
 }
 .section04-inner .top-bot {
   width: calc(100% - 60px);
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  align-items: flex-end;
   position: relative;
   margin: 0 auto;
   margin-right: 0;
   margin-top: -10px;
 }
 .section04-inner .top-bot-left {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
 }
 .section04-inner .top-bot-left .deco {
   width: 600px;
@@ -724,15 +575,9 @@ a {
   text-align: right;
 }
 .section04-inner .top-bot-right {
-  -webkit-box-flex: 0.9553;
-      -ms-flex: 0.9553;
-          flex: 0.9553;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex: 0.9553;
   display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  align-items: flex-end;
 }
 .section04-inner .top-bot-right .deco {
   background: #000;
@@ -754,13 +599,10 @@ a {
   height: 100%;
   top: 0;
   left: calc(50% + 2px);
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
   background: #000;
 }
 .section04-inner .bot {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 .section04-inner .bot .deco {
@@ -774,21 +616,15 @@ a {
   padding: 0 20px 20px 0;
 }
 .section04-inner .bot .artist-swap .swiper-wrapper .swiper-slide {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  justify-content: flex-end;
   gap: 20px;
   padding: 50px 0 0 0;
   overflow: hidden;
   background: #eee;
 }
 .section04-inner .bot .artist-swap .swiper-wrapper .swiper-slide .img-box {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
   position: relative;
 }
 .section04-inner .bot .artist-swap .swiper-wrapper .swiper-slide .img-box .img-crop {
@@ -805,10 +641,8 @@ a {
 .section04-inner .bot .artist-swap .swiper-wrapper .swiper-slide .img-box .img-crop .b_box {
   width: 0;
   height: 7.266vw;
-  -webkit-transition: width 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
   transition: width 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
-  -webkit-transition-delay: 1.2s;
-          transition-delay: 1.2s;
+  transition-delay: 1.2s;
 }
 .section04-inner .bot .artist-swap .swiper-wrapper .swiper-slide .img-box .img-crop .b_box:nth-child(3), .section04-inner .bot .artist-swap .swiper-wrapper .swiper-slide .img-box .img-crop .b_box:nth-child(7) {
   margin: 0 auto;
@@ -817,12 +651,9 @@ a {
 .section04-inner .bot .artist-swap .swiper-wrapper .swiper-slide .img-box .img-crop .line-box {
   width: 0;
   height: 0.969vw;
-  -webkit-transition: all 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
   transition: all 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
-  -webkit-transition-property: width;
   transition-property: width;
-  -webkit-transition-delay: 1.2s;
-          transition-delay: 1.2s;
+  transition-delay: 1.2s;
 }
 .section04-inner .bot .artist-swap .swiper-wrapper .swiper-slide .img-box .img-crop .line-box:nth-child(4), .section04-inner .bot .artist-swap .swiper-wrapper .swiper-slide .img-box .img-crop .line-box:nth-child(8) {
   margin: 0 auto;
@@ -833,8 +664,7 @@ a {
   display: block;
   margin: 0 auto;
   margin-right: 0;
-  -webkit-filter: grayscale(1);
-          filter: grayscale(1);
+  filter: grayscale(1);
 }
 .section04-inner .bot .artist-swap .swiper-wrapper .swiper-slide .img-box::after {
   width: 1px;
@@ -844,30 +674,15 @@ a {
   background: #000;
 }
 .section04-inner .bot .artist-swap .swiper-wrapper .swiper-slide .con-box {
-  -webkit-box-flex: 0.9553;
-      -ms-flex: 0.9553;
-          flex: 0.9553;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex: 0.9553;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
+  justify-content: space-between;
+  flex-flow: column;
 }
 .section04-inner .bot .artist-swap .swiper-wrapper .swiper-slide .con-box-top {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
 }
 .section04-inner .bot .artist-swap .swiper-wrapper .swiper-slide .con-box-bot {
   margin: 240px 0 0 0;
@@ -921,8 +736,6 @@ a {
   width: 100%;
 }
 .section04-inner .bot .artist-swap .arrow {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 35px;
   position: absolute;
@@ -941,15 +754,9 @@ a {
 .section04-inner .bot .artist-swap .arrow > div span {
   width: 100%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 .section04-inner .bot .artist-swap .arrow > div span::before, .section04-inner .bot .artist-swap .arrow > div span::after {
   width: 100%;
@@ -957,23 +764,19 @@ a {
   background: #000;
 }
 .section04-inner .bot .artist-swap .arrow > div.swiper-button-prev span::before {
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
+  transform: rotate(45deg);
   margin-top: 27px;
 }
 .section04-inner .bot .artist-swap .arrow > div.swiper-button-prev span::after {
-  -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
+  transform: rotate(-45deg);
   margin-bottom: 27px;
 }
 .section04-inner .bot .artist-swap .arrow > div.swiper-button-next span::before {
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
+  transform: rotate(45deg);
   margin-bottom: 27px;
 }
 .section04-inner .bot .artist-swap .arrow > div.swiper-button-next span::after {
-  -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
+  transform: rotate(-45deg);
   margin-top: 27px;
 }
 .section04-inner .bot .artist-swap .arrow > div.swiper-button-disabled {
@@ -982,3 +785,41 @@ a {
 .section04-inner .bot .artist-swap .arrow > div::after {
   display: none;
 }
+
+/*** 섹션05 시작 ***/
+.section05 {
+  background: #000;
+}
+.section05-inner {
+  width: 1120px;
+  position: relative;
+  margin: 0 auto;
+}
+.section05-inner .all-menu {
+  display: flex;
+  gap: 70px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.section05-inner .all-menu .am-ul .am-li a {
+  line-height: 50px;
+  font-size: 30px;
+  font-weight: 500;
+  color: #eee;
+}
+.section05-inner .circle-box .mid-circle img {
+  background: url(./img/b5ca6f266e568fafb21f75e851e05143.jpg) center no-repeat;
+  background-size: cover;
+}
+.section05-inner .circle-box .move-circle {
+  width: 450px;
+  height: 450px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: #eee;
+  border-radius: 50%;
+}
+
+/*** 섹션05 끝 ***/
